--- a/sethgottlieb/media/css/global.css
+++ b/sethgottlieb/media/css/global.css
@@ -259,10 +259,13 @@ margin: 5px 5px 5px 10px;
 	background-image:url(../img/pinboard.png);
 }
 
+.service-hashable {
+	background-image:url(../img/hashable.png);
+}
+
 .service-identica {
 	background-image:url(../img/identica.png);
 }
-
 
 .service-chmp {
 	background-image:url(../img/chmp.png);
