added github and quora. cleaned up description of flickr.

--- a/sethgottlieb/layout/skeleton/_body.html
+++ b/sethgottlieb/layout/skeleton/_body.html
@@ -22,6 +22,7 @@
 			        
 			</li>   
 			<li class="service-icon service-twitter"><a href="http://twitter.com/sggottlieb" title="Seth Gottlieb on Twitter">Tweets</a></li>
+			<li class="service-icon service-github"><a href="https://github.com/sggottlieb" title="Seth Gottlieb on Githubg">Code</a></li>
 				
 		</ul>
 		
