--- a/sethgottlieb/layout/skeleton/_base.html
+++ b/sethgottlieb/layout/skeleton/_base.html
@@ -7,7 +7,7 @@
     <title>{% block title %}{{ site.name }}{% endblock %}</title>
     <!--[if IE]><script src="../j/html5.js"></script><![endif]-->
     {% block meta_tags %}
-    <meta name="description" content="{{ site.name }}: Your site description.">
+    <meta name="description" content="{{ site.name }}: Personal Website.">
     <meta name="keywords" content="">
     {% endblock %}
     {% block css %}
@@ -18,6 +18,7 @@
     {% block extra_js %}{% endblock %}
     {% endblock %}
     <link rel="shortcut icon" href="/media/favicon.ico" />
+    <link rel="author" href="https://plus.google.com/u/0/102992494947018640072" />
     <script type="text/javascript">
 
       var _gaq = _gaq || [];
@@ -45,6 +46,7 @@
 
 <footer>
 {% include "skeleton/_footer.html" %}
+<a href="https://plus.google.com/102992494947018640072" rel="publisher">Find me on Google+</a>
 </footer>
 
 </body>
